合并完善代码